--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"npm run server\"",
+    "server": "json-server --watch server/db.json --port 3001",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/uuidv4": "^5.0.0",
+    "axios": "^1.1.3",
+    "concurrently": "^7.5.0",
     "framer-motion": "^7.6.2",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0-alpha.7",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
+    "react-uuid": "^2.0.0",
     "sass": "^1.55.0",
+    "uuidv4": "^6.2.13",
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
