--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
+    "react-select": "^5.6.0",
     "react-uuid": "^2.0.0",
     "sass": "^1.55.0",
     "uuidv4": "^6.2.13",
