--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^7.5.0",
     "framer-motion": "^7.6.2",
     "json-server": "^0.17.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
@@ -29,6 +30,7 @@
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
