--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.4.2",
     "react-select": "^5.6.0",
     "react-uuid": "^2.0.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
     "uuidv4": "^6.2.13",
     "vite-plugin-svgr": "^2.2.2"
