--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-meta-tags": "^1.0.1",
     "react-paginate": "^8.1.3",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-redux": "^8.0.4",
